--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,35 @@
                 <a href="services.html"
                     class="text-slate-300 hover:text-white font-medium transition-colors">Services</a>
                 <a href="contact.html" class="text-white font-medium transition-colors">Contact</a>
+
+                <!-- Dashboard Dropdown -->
+                <div class="group relative">
+                    <button
+                        class="flex items-center gap-1 text-white font-medium hover:text-primary transition-colors py-2">
+                        Dashboard <i
+                            class="fa-solid fa-chevron-down text-xs transition-transform group-hover:rotate-180"></i>
+                    </button>
+                    <div
+                        class="dropdown-menu absolute top-full left-0 w-56 bg-white text-slate-800 rounded-lg shadow-xl overflow-hidden mt-2 border border-slate-100 p-2">
+                        <a href="user-dashboard.html"
+                            class="flex items-center px-4 py-3 hover:bg-slate-50 rounded-md transition-colors font-medium text-slate-600">
+                            <span class="w-8 flex justify-center"><i class="fa-solid fa-user text-secondary"></i></span>
+                            <div>
+                                <span class="block text-sm font-bold">Client Portal</span>
+                                <span class="block text-xs text-slate-400">User Dashboard</span>
+                            </div>
+                        </a>
+                        <a href="admin-dashboard.html"
+                            class="flex items-center px-4 py-3 hover:bg-slate-50 rounded-md transition-colors font-medium text-slate-600">
+                            <span class="w-8 flex justify-center"><i
+                                    class="fa-solid fa-user-shield text-primary"></i></span>
+                            <div>
+                                <span class="block text-sm font-bold">Admin Portal</span>
+                                <span class="block text-xs text-slate-400">Admin Dashboard</span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="hidden md:flex items-center gap-4">
                 <button id="rtl-toggle"
@@ -95,6 +124,17 @@
                 <a href="services.html"
                     class="text-slate-300 hover:text-white border-b border-slate-800 pb-2">Services</a>
                 <a href="contact.html" class="text-primary hover:text-white border-b border-slate-800 pb-2">Contact</a>
+
+                <div class="group dropdown-toggle cursor-pointer border-b border-slate-800 pb-2">
+                    <div class="flex justify-between items-center text-white mb-2">
+                        <span>Dashboard</span>
+                        <i class="fa-solid fa-chevron-down chevron-icon transition-transform text-xs"></i>
+                    </div>
+                    <div class="dropdown-menu hidden pl-4 space-y-2 mt-2">
+                        <a href="user-dashboard.html" class="block text-slate-300 hover:text-white py-1">User Dashboard</a>
+                        <a href="admin-dashboard.html" class="block text-slate-300 hover:text-white py-1">Admin Dashboard</a>
+                    </div>
+                </div>
 
                 <!-- Mobile RTL Toggle -->
                 <div class="flex justify-between items-center border-b border-slate-800 pb-2">
