--- a/index.html
+++ b/index.html
@@ -398,7 +398,9 @@
             </div>
         </div>
 
-        <!-- Security Certifications & Compliance -->
+    </section>
+
+    <!-- Security Certifications & Compliance -->
         <section class="py-24 bg-white relative">
             <div class="container mx-auto px-6">
                 <div class="text-center max-w-2xl mx-auto mb-16 reveal">
