--- a/index2.html
+++ b/index2.html
@@ -137,6 +137,17 @@
                 <a href="contact.html"
                     class="text-slate-300 hover:text-white border-b border-slate-700 pb-2">Contact</a>
 
+                <div class="group dropdown-toggle cursor-pointer border-b border-slate-700 pb-2">
+                    <div class="flex justify-between items-center text-white mb-2">
+                        <span>Dashboard</span>
+                        <i class="fa-solid fa-chevron-down chevron-icon transition-transform text-xs"></i>
+                    </div>
+                    <div class="dropdown-menu hidden pl-4 space-y-2 mt-2">
+                        <a href="user-dashboard.html" class="block text-slate-300 hover:text-white py-1">User Dashboard</a>
+                        <a href="admin-dashboard.html" class="block text-slate-300 hover:text-white py-1">Admin Dashboard</a>
+                    </div>
+                </div>
+
                 <div class="flex justify-between items-center border-b border-slate-700 pb-2">
                     <span class="text-slate-300">Region</span>
                     <button id="rtl-toggle-mobile"
