--- a/about.html
+++ b/about.html
@@ -64,6 +64,35 @@
                 <a href="services.html"
                     class="text-slate-300 hover:text-white font-medium transition-colors">Services</a>
                 <a href="contact.html" class="text-slate-300 hover:text-white font-medium transition-colors">Contact</a>
+
+                <!-- Dashboard Dropdown -->
+                <div class="group relative">
+                    <button
+                        class="flex items-center gap-1 text-white font-medium hover:text-primary transition-colors py-2">
+                        Dashboard <i
+                            class="fa-solid fa-chevron-down text-xs transition-transform group-hover:rotate-180"></i>
+                    </button>
+                    <div
+                        class="dropdown-menu absolute top-full left-0 w-56 bg-white text-slate-800 rounded-lg shadow-xl overflow-hidden mt-2 border border-slate-100 p-2">
+                        <a href="user-dashboard.html"
+                            class="flex items-center px-4 py-3 hover:bg-slate-50 rounded-md transition-colors font-medium text-slate-600">
+                            <span class="w-8 flex justify-center"><i class="fa-solid fa-user text-secondary"></i></span>
+                            <div>
+                                <span class="block text-sm font-bold">Client Portal</span>
+                                <span class="block text-xs text-slate-400">User Dashboard</span>
+                            </div>
+                        </a>
+                        <a href="admin-dashboard.html"
+                            class="flex items-center px-4 py-3 hover:bg-slate-50 rounded-md transition-colors font-medium text-slate-600">
+                            <span class="w-8 flex justify-center"><i
+                                    class="fa-solid fa-user-shield text-primary"></i></span>
+                            <div>
+                                <span class="block text-sm font-bold">Admin Portal</span>
+                                <span class="block text-xs text-slate-400">Admin Dashboard</span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </div>
 
             <div class="hidden md:flex items-center gap-4">
@@ -98,6 +127,17 @@
                     class="text-slate-300 hover:text-white border-b border-slate-800 pb-2">Services</a>
                 <a href="contact.html"
                     class="text-slate-300 hover:text-white border-b border-slate-800 pb-2">Contact</a>
+
+                <div class="group dropdown-toggle cursor-pointer border-b border-slate-800 pb-2">
+                    <div class="flex justify-between items-center text-white mb-2">
+                        <span>Dashboard</span>
+                        <i class="fa-solid fa-chevron-down chevron-icon transition-transform text-xs"></i>
+                    </div>
+                    <div class="dropdown-menu hidden pl-4 space-y-2 mt-2">
+                        <a href="user-dashboard.html" class="block text-slate-300 hover:text-white py-1">User Dashboard</a>
+                        <a href="admin-dashboard.html" class="block text-slate-300 hover:text-white py-1">Admin Dashboard</a>
+                    </div>
+                </div>
 
                 <!-- Mobile RTL Toggle -->
                 <div class="flex justify-between items-center border-b border-slate-800 pb-2">
@@ -299,10 +339,14 @@
                     </li>
                 </ul>
             </div>
-            <div
-                class="rounded-xl overflow-hidden shadow-2xl skew-y-3 opacity-90 border border-slate-700 hover:skew-y-0 transition-transform duration-500">
-                <img src="https://images.unsplash.com/photo-1526778548025-fa2f459cd5c1?w=1200"
-                    class="w-full h-full object-cover grayscale hover:grayscale-0 transition-all">
+            <div class="rounded-xl overflow-hidden shadow-2xl border border-slate-700 bg-slate-800">
+                <div class="relative pb-[65%]">
+                    <iframe
+                        title="SecureTech HQ Map"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.047655070751!2d-122.40136382369327!3d37.79287291252008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858064f5a18d1f%3A0x7a2f4c3f1d084b9f!2sEmbarcadero%20Center%2C%20575%20Market%20St%2C%20San%20Francisco%2C%20CA%2094105!5e0!3m2!1sen!2sus!4v1699999999999"
+                        class="absolute inset-0 w-full h-full border-0" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
         </div>
     </section>
