--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -139,7 +139,7 @@
     </style>
 </head>
 
-<body class="bg-dark text-slate-300 font-sans flex h-screen overflow-hidden">
+<body class="bg-dark text-slate-300 font-sans flex min-h-screen lg:h-screen overflow-x-hidden">
 
     <!-- Sidebar -->
     <aside
@@ -217,7 +217,7 @@
     </aside>
 
     <!-- Main Content -->
-    <div class="flex-1 flex flex-col h-full overflow-hidden relative">
+    <div class="flex-1 flex flex-col min-h-screen lg:h-full overflow-hidden relative">
         <!-- Top Header with Navbar -->
         <header
             class="h-16 bg-gradient-to-r from-slate-900 to-slate-950 border-b border-slate-800 flex items-center justify-between px-6 z-40 shadow-lg">
@@ -259,10 +259,10 @@
         </header>
 
         <!-- Main Scrollable Area -->
-        <main class="flex-1 overflow-y-auto p-6 bg-gradient-to-br from-dark via-slate-900 to-dark">
+        <main class="flex-1 overflow-y-auto p-4 sm:p-6 bg-gradient-to-br from-dark via-slate-900 to-dark">
 
             <!-- Status Cards -->
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-4 md:gap-6 mb-8">
                 <div
                     class="card-hover bg-slate-800 rounded-xl p-6 border border-slate-700 relative overflow-hidden animate-fade-up">
                     <div
@@ -331,7 +331,7 @@
                     </h3>
                 </div>
                 <div class="overflow-x-auto">
-                    <table class="w-full text-left text-sm text-slate-400">
+                    <table class="w-full min-w-[640px] text-left text-sm text-slate-400">
                         <thead class="bg-slate-900 border-b border-slate-700">
                             <tr>
                                 <th class="px-6 py-4 font-medium text-slate-300">ID</th>
@@ -363,7 +363,7 @@
             </div>
 
             <!-- Quick Help -->
-            <div class="grid md:grid-cols-2 gap-6">
+            <div class="grid md:grid-cols-2 gap-4 md:gap-6">
                 <a href="#"
                     class="group bg-gradient-to-br from-slate-800 to-slate-900 p-6 rounded-xl border border-slate-700 hover:border-primary transition-all duration-300 flex items-center gap-4 card-hover">
                     <div
