--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
 
     <!-- Navigation (Same as Index V1) -->
     <nav class="fixed w-full z-50 transition-all duration-300 glass-nav">
-        <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+        <div class="container mx-auto px-4 sm:px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="flex items-center gap-2 group">
                 <div
                     class="relative w-10 h-10 flex items-center justify-center bg-gradient-to-br from-secondary to-primary rounded-lg shadow-lg group-hover:shadow-[0_0_15px_rgba(16,185,129,0.5)] transition-all">
@@ -164,13 +164,13 @@
 
     <!-- Hero Section -->
     <header
-        class="relative overflow-hidden bg-gradient-to-b from-slate-900/90 via-slate-900 to-dark pt-28 pb-20 lg:pt-40 lg:pb-28">
+        class="relative overflow-hidden bg-gradient-to-b from-slate-900/90 via-slate-900 to-dark pt-24 pb-16 lg:pt-40 lg:pb-28">
         <div class="absolute inset-0 -z-10">
             <div class="absolute -right-24 -top-24 w-96 h-96 bg-secondary/20 blur-3xl rounded-full animate-float"></div>
             <div class="absolute left-10 top-32 w-64 h-64 bg-primary/15 blur-3xl rounded-full animate-pulse-glow"></div>
         </div>
 
-        <div class="container mx-auto px-6 flex flex-col lg:flex-row items-center gap-12">
+        <div class="container mx-auto px-4 sm:px-6 flex flex-col lg:flex-row items-center gap-10 lg:gap-12">
             <div class="w-full lg:w-1/2 space-y-6 text-center lg:text-left">
                 <h1 class="text-4xl md:text-5xl font-extrabold text-white leading-tight">
                     Advanced Cybersecurity for Modern Enterprises
@@ -218,10 +218,10 @@
 
     <!-- Security Assessment Widget -->
     <section id="assessment" class="py-16 bg-slate-800 border-b border-slate-700">
-        <div class="container mx-auto px-6">
+        <div class="container mx-auto px-4 sm:px-6">
             <div
-                class="glass-card rounded-2xl p-8 md:p-12 relative overflow-hidden bg-gradient-to-br from-slate-900 to-slate-800 border border-slate-700">
-                <div class="relative z-10 grid md:grid-cols-2 gap-12 items-center">
+                class="glass-card rounded-2xl p-6 md:p-10 relative overflow-hidden bg-gradient-to-br from-slate-900 to-slate-800 border border-slate-700">
+                <div class="relative z-10 grid md:grid-cols-2 gap-8 md:gap-12 items-center">
                     <div>
                         <h3 class="text-3xl font-bold text-white mb-4">How Secure Is Your Business?</h3>
                         <p class="text-slate-400 mb-8">Take our 1-minute initial assessment to identify potential
@@ -285,14 +285,14 @@
     </section>
 
     <!-- Services Tabs -->
-    <section class="py-24 bg-dark">
-        <div class="container mx-auto px-6">
+    <section class="py-16 lg:py-24 bg-dark">
+        <div class="container mx-auto px-4 sm:px-6">
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold text-white mb-4">Our Expertise</h2>
                 <p class="text-slate-400">Holistic protection tailored to your industry needs.</p>
             </div>
 
-            <div class="grid lg:grid-cols-4 gap-8">
+            <div class="grid lg:grid-cols-4 gap-6 md:gap-8">
                 <!-- Tab Menu -->
                 <div class="lg:col-span-1 space-y-2">
                     <button
@@ -430,8 +430,8 @@
     </section>
 
     <!-- Methodology -->
-    <section class="py-24 bg-slate-900 border-y border-slate-800">
-        <div class="container mx-auto px-6">
+    <section class="py-16 lg:py-24 bg-slate-900 border-y border-slate-800">
+        <div class="container mx-auto px-4 sm:px-6">
             <h2 class="text-3xl font-bold text-center text-white mb-16">Our Proven Framework</h2>
             <div class="grid md:grid-cols-4 gap-8 relative">
                 <!-- Connecting Line (hidden on mobile) -->
@@ -472,8 +472,8 @@
     </section>
 
     <!-- Security Certifications & Compliance -->
-    <section class="py-24 bg-slate-900 relative border-y border-slate-800">
-        <div class="container mx-auto px-6">
+    <section class="py-16 lg:py-24 bg-slate-900 relative border-y border-slate-800">
+        <div class="container mx-auto px-4 sm:px-6">
             <div class="text-center max-w-2xl mx-auto mb-16">
                 <div class="inline-block px-4 py-2 rounded-full bg-primary/10 text-primary font-bold text-sm mb-6">
                     Certifications & Compliance
@@ -482,7 +482,7 @@
                 <p class="text-slate-400 text-lg">Certified and compliant with the most rigorous industry frameworks</p>
             </div>
 
-            <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-6">
+            <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-4 md:gap-6">
                 <div
                     class="group p-6 rounded-xl bg-slate-800 border border-slate-700 hover:border-primary/50 shadow-sm hover:shadow-[0_0_20px_rgba(0,102,255,0.3)] transition-all duration-300 text-center">
                     <div class="text-4xl mb-3">🏆</div>
@@ -524,8 +524,8 @@
     </section>
 
     <!-- Technology Stack -->
-    <section class="py-24 bg-dark relative overflow-hidden">
-        <div class="container mx-auto px-6 relative z-10">
+    <section class="py-16 lg:py-24 bg-dark relative overflow-hidden">
+        <div class="container mx-auto px-4 sm:px-6 relative z-10">
             <div class="text-center max-w-2xl mx-auto mb-16">
                 <div class="inline-block px-4 py-2 rounded-full bg-secondary/10 text-secondary font-bold text-sm mb-6">
                     Technology Partners
@@ -535,7 +535,7 @@
                 </p>
             </div>
 
-            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
+            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6 md:gap-8">
                 <!-- Security Tools -->
                 <div
                     class="p-6 rounded-2xl bg-slate-800 border border-slate-700 shadow-sm hover:shadow-[0_0_20px_rgba(0,102,255,0.2)] hover:border-slate-600 transition-all">
@@ -620,8 +620,8 @@
     </section>
 
     <!-- Client Testimonials -->
-    <section class="py-24 bg-slate-900 relative overflow-hidden border-y border-slate-800">
-        <div class="container mx-auto px-6 relative z-10">
+    <section class="py-16 lg:py-24 bg-slate-900 relative overflow-hidden border-y border-slate-800">
+        <div class="container mx-auto px-4 sm:px-6 relative z-10">
             <div class="text-center max-w-2xl mx-auto mb-16">
                 <div class="inline-block px-4 py-2 rounded-full bg-primary/10 text-primary font-bold text-sm mb-6">
                     Client Testimonials
@@ -630,7 +630,7 @@
                 <p class="text-slate-400 text-lg">Don't just take our word for it - hear from our satisfied clients</p>
             </div>
 
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-8">
                 <!-- Testimonial 1 -->
                 <div
                     class="p-8 rounded-2xl bg-slate-800 border border-slate-700 shadow-sm hover:shadow-[0_0_30px_rgba(0,102,255,0.2)] hover:border-slate-600 transition-all duration-300">
@@ -709,8 +709,8 @@
     </section>
 
     <!-- Pricing Plans -->
-    <section class="py-24 bg-dark relative">
-        <div class="container mx-auto px-6">
+    <section class="py-16 lg:py-24 bg-dark relative">
+        <div class="container mx-auto px-4 sm:px-6">
             <div class="text-center max-w-2xl mx-auto mb-16">
                 <div class="inline-block px-4 py-2 rounded-full bg-primary/10 text-primary font-bold text-sm mb-6">
                     Transparent Pricing
@@ -720,7 +720,7 @@
                 </p>
             </div>
 
-            <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
+            <div class="grid md:grid-cols-3 gap-6 md:gap-8 max-w-6xl mx-auto">
                 <!-- Essentials Plan -->
                 <div
                     class="p-8 rounded-2xl bg-slate-800 border-2 border-slate-700 hover:border-primary/30 shadow-sm hover:shadow-[0_0_30px_rgba(0,102,255,0.2)] transition-all duration-300">
@@ -850,8 +850,8 @@
     </section>
 
     <!-- FAQ Section -->
-    <section class="py-24 bg-slate-900 relative border-y border-slate-800">
-        <div class="container mx-auto px-6">
+    <section class="py-16 lg:py-24 bg-slate-900 relative border-y border-slate-800">
+        <div class="container mx-auto px-4 sm:px-6">
             <div class="text-center max-w-2xl mx-auto mb-16">
                 <div class="inline-block px-4 py-2 rounded-full bg-accent/10 text-accent font-bold text-sm mb-6">
                     Frequently Asked Questions
@@ -956,12 +956,12 @@
     </section>
 
     <!-- Newsletter Section -->
-    <section class="py-20 bg-dark relative overflow-hidden border-t border-slate-800">
+    <section class="py-16 lg:py-20 bg-dark relative overflow-hidden border-t border-slate-800">
         <div class="absolute inset-0 opacity-10">
             <div class="absolute top-0 left-0 w-96 h-96 bg-primary rounded-full blur-3xl"></div>
             <div class="absolute bottom-0 right-0 w-96 h-96 bg-secondary rounded-full blur-3xl"></div>
         </div>
-        <div class="container mx-auto px-6 relative z-10">
+        <div class="container mx-auto px-4 sm:px-6 relative z-10">
             <div class="max-w-2xl mx-auto text-center">
                 <i class="fa-regular fa-paper-plane text-5xl text-primary mb-6"></i>
                 <h2 class="text-3xl md:text-4xl font-bold text-white mb-4">Stay Ahead of Threats</h2>
@@ -982,7 +982,7 @@
 
     <!-- Footer -->
     <footer class="bg-dark mt-auto border-t border-slate-800 py-12">
-        <div class="container mx-auto px-6">
+        <div class="container mx-auto px-4 sm:px-6">
             <div class="grid md:grid-cols-4 gap-12 mb-12">
                 <div>
                     <div class="flex items-center gap-2 mb-6">
