--- a/index2.html
+++ b/index2.html
@@ -119,7 +119,7 @@
 
         <!-- Mobile Menu -->
         <div id="mobile-menu"
-            class="hidden md:hidden bg-slate-900 border-t border-slate-700 absolute w-full left-0 font-medium z-50 shadow-xl">
+            class="hidden md:hidden bg-slate-900 border-t border-slate-700 absolute w-full left-0 top-full font-medium z-50 shadow-xl">
             <div class="p-6 flex flex-col gap-4">
                 <div class="group dropdown-toggle cursor-pointer border-b border-slate-700 pb-2">
                     <div class="flex justify-between items-center text-white mb-2">
@@ -143,8 +143,10 @@
                         <i class="fa-solid fa-chevron-down chevron-icon transition-transform text-xs"></i>
                     </div>
                     <div class="dropdown-menu hidden pl-4 space-y-2 mt-2">
-                        <a href="user-dashboard.html" class="block text-slate-300 hover:text-white py-1">User Dashboard</a>
-                        <a href="admin-dashboard.html" class="block text-slate-300 hover:text-white py-1">Admin Dashboard</a>
+                        <a href="user-dashboard.html" class="block text-slate-300 hover:text-white py-1">User
+                            Dashboard</a>
+                        <a href="admin-dashboard.html" class="block text-slate-300 hover:text-white py-1">Admin
+                            Dashboard</a>
                     </div>
                 </div>
 
