--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard - SecureTech Portal</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Admin Dashboard - SecureTech Portal</title>    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
