--- a/contact.html
+++ b/contact.html
@@ -266,14 +266,12 @@
                     </div>
                 </div>
 
-                <!-- Map Placeholder -->
-                <div class="w-full h-64 bg-slate-800 rounded-xl border border-slate-700 overflow-hidden relative group">
-                    <img src="https://images.unsplash.com/photo-1526778548025-fa2f459cd5c1?w=800"
-                        class="w-full h-full object-cover opacity-50 group-hover:opacity-75 transition-opacity">
-                    <div class="absolute inset-0 flex items-center justify-center pointer-events-none">
-                        <span class="px-4 py-2 bg-dark/80 rounded text-sm text-white backdrop-blur">View on Google
-                            Maps</span>
-                    </div>
+                <!-- Live Map Embed -->
+                <div class="w-full h-64 rounded-xl border border-slate-700 overflow-hidden shadow-lg">
+                    <iframe title="SecureTech on Google Maps" class="w-full h-full"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.086049451479!2d-122.40138998467762!3d37.793611979756565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858064d7a1d3d3%3A0x9d9f6f5b5e1e2b3!2sSalesforce%20Tower!5e0!3m2!1sen!2sus!4v1700000000000!5m2!1sen!2sus"
+                        style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
